Bug 369369 - Methods get wrong arguments marked as optional in tooltip
Summary: Methods get wrong arguments marked as optional in tooltip
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: Code completion (other bugs)
Version First Reported In: 5.0.1
Platform: Other Linux
: NOR minor
Target Milestone: 1.7.3
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-26 03:39 UTC by Nicolás Alvarez
Modified: 2017-01-01 01:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolás Alvarez 2016-09-26 03:39:38 UTC
If a function has optional arguments (arguments with default values), the tooltip that appears when typing the arguments in a call shows square brackets around the optional arguments:

def func1(arg1, arg2, arg3=None, arg4=42, arg5='default'):
    pass

func1( # argument tooltip says void func1 (arg1, arg2, [arg3, arg4, arg5])

However, an instance method with optional arguments shows the square brackets in the wrong set of arguments:

class C:
    def func1(self, arg1, arg2, arg3=None, arg4=42, arg5='default'):
        pass

c = C()
c.func1( # argument tooltip says void func1 (arg1, arg2, arg3, [arg4, arg5])

It appears as if arg3 was not optional, but it is.

This is probably because it's not compensating for the presence of the implicit 'self' parameter.
Comment 1 Francis Herne 2017-01-01 01:13:13 UTC
Git commit cbcde7f0136bde15858931774fb9e44a8e217a7e by Francis Herne.
Committed on 01/01/2017 at 01:03.
Pushed by flherne into branch '5.1'.

Completion hint: Correct default-argument index for non-static methods.

>From the bug:
```
class C:
    def func1(self, arg1, arg2, arg3=None, arg4=42, arg5='default'):
        pass
c = C()
c.func1(
 # argument tooltip says void func1 (arg1, arg2, arg3, [arg4, arg5])
```

Now '(arg1, arg2, [arg3, arg4, arg5])' as expected.

Still wrong in case of calling the method directly from the class:
`C.func1(c,` <- same tooltip, but now the self argument is explicit.

This was broken before too, and would require much more intrusive
 changes to fix because we only have the function declaration currently.

Quick fix for 5.1, I'm making some larger changes for master.

M  +4    -5    codecompletion/helpers.cpp

https://commits.kde.org/kdev-python/cbcde7f0136bde15858931774fb9e44a8e217a7e